--- a/z1-homepage.css
+++ b/z1-homepage.css
@@ -14,6 +14,40 @@ body {
   object-fit: contain;
 }
 
+.shortcut {
+  width: 60px;
+  height: 70px;
+  position: relative;
+  transition: background-color;
+  cursor: pointer;
+}
+
+.shortcut::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: background-color 0.3s ease;
+}
+
+.shortcut:hover::after {
+  background-color: rgba(132, 182, 247, 0.178);
+}
+
+.shortcut img, .shortcutText{
+  margin-left:5px;
+  width:50px;
+
+}
+
+.shortcutText {
+  margin-top: -4px;
+  color: lightgray;
+  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  font-size: 13px;
+}
 
 @media screen and (min-width: 1613px) {
 
