--- a/z1-homepage.css
+++ b/z1-homepage.css
@@ -9,9 +9,46 @@ body {
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
   height: 100%;
   object-fit: contain;
+  display: flex;
+}
+
+h1 {
+  order: 2;
+  width: 930px;
+  justify-self: flex-end;
+}
+
+h1 img {
+  width: 930px;
+  height:208px;
+  margin-top: -40px;
+}
+
+#navbar {
+  opacity: 0.5;
+  border: rgba(255, 123, 0, 0.63) solid 2px;
+  max-width:152px;
+  min-width:160px;
+  height:20px;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+}
+
+.dropdown:hover #navbar{
+  opacity: 0.5;
+  border: rgba(255, 123, 0, 0.63) solid 3px;
+  background-color: rgba(255, 123, 0, 0.63);
+  max-width:152px;
+  min-width:160px;
+  height:20px;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+
+  cursor: pointer;
 }
 
 .shortcut {
@@ -21,6 +58,7 @@ body {
   transition: background-color;
   cursor: pointer;
 }
+
 
 .shortcut::after {
   content: "";
@@ -44,9 +82,36 @@ body {
 
 .shortcutText {
   margin-top: -4px;
-  color: lightgray;
+  color: rgb(248, 244, 244);
   text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
   font-size: 13px;
+}
+.dropdown {
+  max-width:152px;
+  min-width:160px;
+  max-height: 24px;
+  height: 24px;
+  order: 0;
+  justify-self: flex-start;
+}
+.dropdown-content #shortcutmenu{
+  position: relative;
+  display:none;
+  max-width: 152px;
+  min-width: 152px;
+}
+
+
+.dropdown:hover .dropdown-content #shortcutmenu{
+  display: block;
+  position: absolute;
+  background-color: #ffffff00;
+  max-width: 145px;
+  min-width: 143px;
+  border: rgba(255, 123, 0, 0.219) solid 1px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 10px;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 1613px) {
